fix: fix dark mode text & force light mode

--- a/front/lec-app/src/index.css
+++ b/front/lec-app/src/index.css
@@ -3,9 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: only light;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -41,7 +39,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
